--- a/netlify.toml
+++ b/netlify.toml
@@ -6,4 +6,4 @@
   package = "netlify-plugin-onboarding"
 
 [template.environment]
-  NEXT_PUBLIC_CHEC_PUBLIC_KEY = "Chec Public Key (under Setup > Developer)"
+  NEXT_PUBLIC_CHEC_PUBLIC_KEY = "pk_1886452aeeab90e4b9d68b24ed1227cb934bbe1fee52c"
