--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "seed": "chec-seed seeds"
   },
   "dependencies": {
-    "@chec/commerce.js": "^2.7.1",
+    "@chec/cli": "^1.2.1",
+    "@chec/commerce.js": "^2.6.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
+    "axios": "^0.21.1",
     "body-scroll-lock": "^2.6.4",
     "dotenv": "^8.2.0",
+    "drive-db": "^6.0.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "netlify-plugin-onboarding": "^1.0.0",
@@ -33,10 +36,11 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sass": "^1.34.0",
+    "server": "^1.0.34",
     "swiper": "^6.6.2"
   },
   "devDependencies": {
-    "@chec/seeder": "^1.1.1",
+    "@chec/seeder": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
